--- a/desk/package.json
+++ b/desk/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "yarn build && nodemon --exec electron ./dist/main.js --watch ./ --ext .js,.css,.ts",
+    "start": "nodemon",
     "app:dist": "yarn build && electron-builder"
   },
   "devDependencies": {
