--- a/desk/tsconfig.json
+++ b/desk/tsconfig.json
@@ -1,11 +1,10 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020"],
+    "lib": ["ES2020","DOM"],
     "module": "CommonJS",
     "skipLibCheck": true,
     "esModuleInterop": true,
-    // "typeRoots": ["./src/global.d.ts"],
     // "typeRoots": ["node_modules/@types"],
     // "types": ["node", "electron"],
 
@@ -30,5 +29,5 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src", "global.d.ts"],
+  "include": ["src", "global.d.ts"]
 }
