--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "mobx-react": "^9.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-text-overflow": "^1.0.2",
     "react-zoom-pan-pinch": "^3.6.1"
   },
   "devDependencies": {
