修复应用放大缩小没有过渡动画的问题以及间隙问题

--- a/desk/package.json
+++ b/desk/package.json
@@ -6,7 +6,7 @@
   "author": "cynic",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && node copy.js",
     "start": "nodemon",
     "app:dist": "yarn build && electron-builder"
   },
