--- a/desk/package.json
+++ b/desk/package.json
@@ -21,10 +21,10 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
-    "exiftool-vendored": "^29.0.0",
     "express": "^4.18.2",
     "image-size": "^1.2.0",
     "lodash": "^4.17.21",
+    "sharp": "^0.33.5",
     "wrap-ansi": "7.0.0"
   },
   "build": {
