完成快捷键模块

--- a/desk/src/assets/config/settingconfig.json
+++ b/desk/src/assets/config/settingconfig.json
@@ -1,5 +1,6 @@
 {
   "autoRename": [],
   "handlePicCount": 0,
-  "showStartup": false
+  "showStartup": false,
+  "shortcuts": [false, false, false, false, false, false, false]
 }
