--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flatpickr": "^3.10.13",
+    "react-hotkeys-hook": "^4.6.1",
     "react-text-overflow": "^1.0.2",
     "react-zoom-pan-pinch": "^3.6.1"
   },
