--- a/desk/package.json
+++ b/desk/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.2",
     "image-size": "^1.2.0",
     "lodash": "^4.17.21",
+    "portfinder": "^1.0.38",
     "sharp": "^0.33.5",
     "wrap-ansi": "7.0.0"
   },
