--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "fast-glob": "^3.3.3",
     "globals": "^15.12.0",
     "sass": "^1.69.5",
     "typescript": "~5.6.2",
